--- a/css/media.css
+++ b/css/media.css
@@ -172,3 +172,34 @@ i.mce-i-visualizer-icon:before {
     font: 400 20px/1 dashicons;
     vertical-align: top;
 }
+
+.visualizer-chart-bg, .visualizer-chart-insert-bg {
+	display: none;
+}
+
+.visualizer-library-chart:hover .visualizer-chart-bg {
+	display: block;
+	position: absolute;
+    background: #000000;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+}
+
+.visualizer-library-chart:hover .visualizer-chart-bg ~ .visualizer-chart-insert-bg {
+	display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+}
+
+button.visualizer-library-chart-insert{
+    position: absolute;
+    top: 45%;
+    left: 45%;
+}
