--- a/css/gutenberg/block.css
+++ b/css/gutenberg/block.css
@@ -5,3 +5,8 @@
 .v-form-spinner.v-form-loading {
 	display: block;
 }
+
+span.gutenberg-create-chart-source-attributes span:nth-of-type(n+2) {
+	display: none;
+}
+
