show chart inline after creating

--- a/css/gutenberg/block.css
+++ b/css/gutenberg/block.css
@@ -10,3 +10,6 @@ span.gutenberg-create-chart-source-attributes span:nth-of-type(n+2) {
 	display: none;
 }
 
+.visualizer-actions {
+	display: none;
+}
