Integrate https://www.datatables.net as new table type

--- a/css/frame.css
+++ b/css/frame.css
@@ -484,6 +484,10 @@ div.viz-group-content .viz-group-description {
 	background-position: -600px -225px;
 }
 
+.type-box-htmltable .type-label {
+	background-position: -301px -670px;
+}
+
 .type-box-table .type-label {
 	background-position: -301px -670px;
 }
