--- a/css/frame.css
+++ b/css/frame.css
@@ -484,7 +484,7 @@ div.viz-group-content .viz-group-description {
 	background-position: -600px -225px;
 }
 
-.type-box-htmltable .type-label {
+.type-box-dataTable .type-label {
 	background-position: -301px -670px;
 }
 
