--- a/css/frame.css
+++ b/css/frame.css
@@ -6,6 +6,7 @@
 	right: 0;
 	bottom: 60px;
 	left: 0;
+	width: calc(100% - 300px);
 	background-color: white;
 }
 
@@ -85,7 +86,6 @@
 	font-weight: 600;
 	line-height: 21px;
 	cursor: pointer;
-	-webkit-transition: 0.15s color ease-in-out,0.15s background-color ease-in-out,0.15s border-color ease-in-out;
 	transition: 0.15s color ease-in-out,0.15s background-color ease-in-out,0.15s border-color ease-in-out;
 }
 
@@ -124,7 +124,6 @@
 	background: #fff;
 	box-shadow: none;
 	cursor: pointer;
-	-webkit-transition: color 0.15s ease-in-out,border-color 0.15s ease-in-out,background 0.15s ease-in-out;
 	transition: color 0.15s ease-in-out,border-color 0.15s ease-in-out,background 0.15s ease-in-out;
 }
 
@@ -578,7 +577,6 @@ div.viz-group-content .viz-group-description {
 	text-shadow: none!important;
 	font-family: "Open Sans",sans-serif;
 	font-weight: 700;
-	-webkit-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 }
 
@@ -589,8 +587,6 @@ div.viz-group-content .viz-group-description {
 	background: #2f8cea  url("../images/computer.png") no-repeat scroll 7px -36px !important;
 	box-shadow: 0 1px 0 rgba(171, 171, 171, 0.5) inset, 0 1px 0 rgba(0, 0, 0, 0.15) !important;
 	box-shadow: none !important;
-	-webkit-transition: all 0.3s ease 0s;
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease 0s;
 	transition: all 0.3s ease;
 }
@@ -609,7 +605,6 @@ div.viz-group-content .viz-group-description {
 	box-shadow: none !important;
 	font-family: "Open Sans",sans-serif;
 	font-weight: 700;
-	-webkit-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 	/*margin-left: 2px !important;*/
 }
@@ -621,8 +616,6 @@ div.viz-group-content .viz-group-description {
 	color: white !important;
 	background: #89b158   url("../images/web.png") no-repeat scroll 7px -38px !important;
 	box-shadow: none !important;
-	-webkit-transition: all 0.3s ease 0s;
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease 0s;
 	transition: all 0.3s ease;
 }
@@ -644,7 +637,6 @@ div.viz-group-content .viz-group-description {
 	box-shadow: none !important;
 	font-family: "Open Sans",sans-serif;
 	font-weight: 700;
-	-webkit-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 	/*margin-left: 2px !important;
 	margin-top: 2px !important;*/
@@ -657,8 +649,6 @@ div.viz-group-content .viz-group-description {
 	color: white !important;
 	background: #10aecb   url("../images/from_chart.png") no-repeat scroll 7px -36px !important;
 	box-shadow: none !important;
-	-webkit-transition: all 0.3s ease 0s;
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease 0s;
 	transition: all 0.3s ease;
 	/*margin-top: 2px !important;*/
@@ -684,7 +674,6 @@ button#editor-chart-button {
 	background-color: #2f8cea !important;
 	box-shadow: none !important;
 	text-shadow: none;
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 }
 
@@ -695,7 +684,6 @@ button#editor-chart-button {
 	box-shadow: none !important;
 	font-family: "Open Sans",sans-serif;
 	font-weight: 700;
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 }
 
@@ -706,7 +694,6 @@ button#editor-chart-button {
 	box-shadow: none !important;
 	font-family: "Open Sans",sans-serif;
 	font-weight: 700;
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 }
 
@@ -728,7 +715,6 @@ button#editor-chart-button {
 	box-shadow: none !important;
 	font-family: "Open Sans",sans-serif;
 	font-weight: 700;
-	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 }
 
@@ -981,7 +967,6 @@ button#editor-chart-button {
 	width: 100%;
 	opacity: 0;
 	background: rgba(253,253,253,0.9);
-	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
 
@@ -1014,7 +999,6 @@ button#editor-chart-button {
 	font-weight: 600;
 	text-decoration: none;
 	text-transform: uppercase;
-	-webkit-transition: 0.1s ease;
 	transition: 0.1s ease;
 }
 
@@ -1057,7 +1041,6 @@ span.viz-section-error {
 	text-align: center;
 }
 
-
 /******************************************************************************/
 /********************************  DB WIZARD  ***********************************/
 /******************************************************************************/
@@ -1067,15 +1050,14 @@ span.viz-section-error {
 
 .db-wizard-condition .select-condition.active {
 	display: block;
+	max-width: 50%;
 	margin-top: 10px;
 	padding-top: 10px;
 	border-top: 1px solid #eee;
-	max-width: 50%;
 	font-weight: 500;
 }
 
 .db-wizard-results {
-	padding: 0 25px 20px;
 	width: calc(100% - 350px);
 }
 
@@ -1085,16 +1067,18 @@ span.viz-section-error {
 
 .db-wizard-query label {
 	display: block;
-	font-weight: 500;
-	color: rgba(0,0,0,0.85);
 	min-width: 150px;
-	font-size: 18px;
 	padding: 20px 0 5px;
+	color: rgba(0,0,0,0.85);
+	font-size: 18px;
+	font-weight: 500;
 }
+
 .db-wizard-query .db-wizard-where label,
 .db-wizard-query .db-wizard-from label {
 	padding-top: 0;
 }
+
 .db-wizard-query > div:not(:last-child) {
 	margin-bottom: 15px;
 }
@@ -1108,51 +1092,65 @@ span.viz-section-error {
 }
 
 .db-wizard-query .chosen-container-single .chosen-single {
+	border: 1px solid #ccc;
 	background: #fff;
+	box-shadow: none;
 	font-size: 13px;
 	font-weight: 500;
-	border: 1px solid #ccc;
-	box-shadow: none;
 }
+
 .db-wizard-templates,
 .db-wizard-templates > div {
 	display: block;
 }
+
 .db-wizard-templates > div {
-	width: 50%;
-	border: 1px solid #efefef;
-	padding: 20px;
-	margin-top: 20px;
 	box-sizing: border-box;
+	width: 50%;
+	margin-top: 20px;
+	padding: 20px;
+	border: 1px solid #efefef;
 }
+
 .db-wizard-templates > div:first-child {
 	margin-top: 0;
 }
+
 .db-wizard-query .chosen-container-multi .chosen-choices {
-	border-color: #ccc;
-	box-shadow: none;
-	background: #fff;
 	padding: 5px;
+	border-color: #ccc;
+	background: #fff;
+	box-shadow: none;
 }
 
 .db-wizard-results .dataTables_wrapper .dataTables_filter input,
 .db-wizard-query .select-condition-operand input,
 .db-wizard-limit input {
-	background: #fff;
-	box-shadow:  none;
+	width: 50%;
+	padding-left: 7px;
 	border: 1px solid #ccc;
 	border-radius: 6px;
-	padding-left: 7px;
-	width: 50%;
+	background: #fff;
+	box-shadow: none;
 	font-size: 13px;
 }
+
 .db-wizard-limit input {
-	margin: 0 0 20px 20px;
 	display: inline;
 	width: 150px;
+	margin: 0 0 20px 20px;
 }
-.db-wizard-limit label{
+
+.db-wizard-limit label {
 	display: inline;
+}
+
+.db-wizard-query .select-condition-operand input::-webkit-input-placeholder {
+	color: #cdcdcd;
+}
+
+.db-wizard-query .select-condition-operand input:-ms-input-placeholder {
+	color: #cdcdcd;
 }
 
 .db-wizard-query .select-condition-operand input::placeholder {
@@ -1160,44 +1158,45 @@ span.viz-section-error {
 }
 
 .db-wizard-query .chosen-container-multi .chosen-choices li.search-choice {
-	background: #fff;
-	font-weight: 600;
 	padding: 5px 30px 5px 5px;
 	border-color: #ccc;
+	background: #fff;
 	box-shadow: none;
+	font-weight: 600;
 }
 
 .db-wizard-results table > thead > tr > th {
+	padding: 15px 8px;
 	border: none;
-	font-size: 18px;
 	color: #252422;
+	background: #fff;
+	font-size: 18px;
 	font-weight: 500;
 	text-align: left;
-	padding: 15px 8px;
-	background: #fff;
 }
 
-.db-wizard-results table > tbody > tr > td, .dataTables_info {
+.db-wizard-results table > tbody > tr > td,
+.dataTables_info {
+	padding: 15px 8px;
 	border-top: 1px solid #a2a2a2;
-	font-size: 14px;
 	color: #252422;
+	font-size: 14px;
 	font-weight: 300;
-	padding: 15px 8px;
-}
-.db-wizard-results table > tbody > tr.odd {
-	background-color: #F7F7F7;
 }
 
+.db-wizard-results table > tbody > tr.odd {
+	background-color: #f7f7f7;
+}
 
 .db-wizard-results table.dataTable.no-footer {
 	border: none;
 }
 
 .db-wizard-results .dataTables_wrapper .dataTables_info {
-	border-top: 1px solid #CCC5B9;
+	border-top: 1px solid #ccc5b9;
 	color: #a2a2a2;
-	font-weight: 500;
 	font-size: 12px;
+	font-weight: 500;
 }
 
 .db-wizard-results .dataTables_filter label {
@@ -1207,19 +1206,20 @@ span.viz-section-error {
 
 .db-wizard-where-template-remove,
 .db-wizard-where-template-add {
-	font-size: 12px;
 	width: auto;
 	height: 25px;
+	margin-top: 10px;
+	border: none;
 	border-radius: 3px;
 	color: #fff;
-	border: none;
-	margin-top: 10px;
+	font-size: 12px;
 	cursor: pointer;
-	transition: .3s ease;
+	transition: 0.3s ease;
 }
+
 .db-wizard-where-template-remove:hover,
 .db-wizard-where-template-add:hover {
-	opacity: .8;
+	opacity: 0.8;
 }
 
 .db-wizard-results .dataTables_wrapper .dataTables_filter {
@@ -1230,36 +1230,76 @@ span.viz-section-error {
 .db-wizard-where-template-add {
 	background-color: #34a85e;
 }
+
 .db-wizard-where-template-remove {
 	background-color: #ff0d00;
 }
 
 #db-query-form .CodeMirror-scroll {
+	overflow: hidden !important;
+	height: 50%;
 	margin: 0;
 	padding: 0;
-	height: 50%;
-	overflow: hidden !important;
 }
 
 #db-query-form .CodeMirror-wrap {
-	width: 90%;
 	height: 200px;
+	padding: 15px;
+	color: #fff;
+	background: #282923;
+	font-size: 15px;
+}
+
+#db-query-form .CodeMirror-wrap .CodeMirror-cursor {
+	border-left: 1px solid #fff !important;
+}
+
+#db-query-form .CodeMirror-wrap .CodeMirror-placeholder {
+	color: #fff;
+}
+
+#db-query-form .CodeMirror-wrap pre {
+	color: #fff !important;
+}
+
+#db-query-form .CodeMirror-wrap pre .cm-keyword {
+	color: #f92472 !important;
+}
+
+#db-query-form .CodeMirror-wrap pre .cm-comment {
+	color: #74705d !important;
+}
+
+#db-query-form .CodeMirror-wrap pre .cm-number,
+#db-query-form .CodeMirror-wrap pre .cm-string {
+	color: #fff !important;
 }
 
 .visualizer-db-query-form > div {
-	display: inline-block;
-	vertical-align: middle;
+	display: block;
 	width: 15%;
+	vertical-align: middle;
+}
+
+#visualizer-db-query {
+	padding: 20px;
 }
 
 .visualizer-db-query-form > div:first-child {
-	width: 70%;
+	width: 100%;
+	margin-bottom: 20px;
 }
 
 .db-wizard-error {
-	color: #ff0000;
+	color: #f00;
 }
 
 .db-wizard-hints {
-	color: #0000ff;
+	margin-bottom: 30px;
+	color: #0085ba;
+}
+
+.db-wizard-hints .visualizer-emboss,
+.db-wizard-hints a {
+	color: #f92472;
 }
