--- a/css/frame.css
+++ b/css/frame.css
@@ -1303,3 +1303,11 @@ span.viz-section-error {
 .db-wizard-hints a {
 	color: #f92472;
 }
+
+.db-wizard-hints ul {
+	list-style: square;
+}
+
+.db-wizard-results .dataTables_wrapper .dataTables_info {
+	width: calc(100% - 17px);
+}
