Table chart: chart with all options prevents user from clicking action buttons in library

--- a/css/library.css
+++ b/css/library.css
@@ -295,3 +295,8 @@ button.media-modal-close {
 .dataTables_scrollBody {
 	overflow: hidden !important;
 }
+
+.dataTables_wrapper {
+    height: 300px;
+    overflow: hidden !important;
+}
