--- a/css/frame.css
+++ b/css/frame.css
@@ -1319,3 +1319,13 @@ span.viz-section-error {
 .db-wizard-results .dataTables_wrapper .dataTables_info {
 	width: calc(100% - 17px);
 }
+
+#vz-chart-docs {
+	right: 85px;
+    bottom: 40px;
+    width: 35%;
+}
+
+#vz-chart-docs a {
+	text-decoration: none;
+}
