--- a/css/frame.css
+++ b/css/frame.css
@@ -1329,3 +1329,8 @@ span.viz-section-error {
 #vz-chart-docs a {
 	text-decoration: none;
 }
+
+/* datatables */
+.dt-button {
+	display: none !important;
+}
