--- a/css/frame.css
+++ b/css/frame.css
@@ -1303,19 +1303,22 @@ span.viz-section-error {
 }
 
 .db-wizard-hints,
-.json-wizard-hints {
+.json-wizard-hints,
+.html-table-editor-hints {
 	margin-bottom: 30px;
 	color: #0085ba;
 }
 
 .db-wizard-hints .visualizer-emboss,
 .db-wizard-hints a,
+.html-table-editor-hints a,
 .json-wizard-hints .visualizer-emboss,
 .json-wizard-hints a {
 	color: #f92472;
 }
 
 .db-wizard-hints ul,
+.html-table-editor-hints ul,
 .json-wizard-hints ul {
 	list-style: square;
 }
@@ -1336,33 +1339,14 @@ span.viz-section-error {
 
 /******************************************************************************/
 /********************************  data tables  *******************************/
+/******************************************************************************/
 .db-wizard-results .dt-button {
 	display: none !important;
 }
 
 /******************************************************************************/
-/********************************  text editor  *******************************/
+/********************************  json table *********************************/
 /******************************************************************************/
-.visualizer-editor-text {
-	padding: 20px;
-	display: inline-block;
-	z-index: 9999;
-	box-sizing: border-box;
-	width: 100%;
-	padding-right: 320px;
-}
-
-.visualizer-editor-text textarea {
-	width: 100%;
-	overflow: auto;
-	background: #282923;
-	color: #ffffff;
-	padding: 15px;
-	height: 200px;
-	font-size: 15px;
-}
-
-/* json source */
 #json-conclude-form .results {
 	min-width: 10px !important;
 }
@@ -1371,7 +1355,7 @@ span.viz-section-error {
 #vz-import-json-url,
 #vz-import-json-root,
 #vz-import-json-paging {
-	width: 90%;
+	width: 85%;
 }
 
 #json-conclude-form .json-table,
@@ -1380,16 +1364,20 @@ span.viz-section-error {
 	vertical-align: middle;
 }
 
-#json-conclude-form .json-table tbody tr:first-child {
-	background-color: #ececec;
+.viz-editor-table tbody tr:first-child {
+	background-color: #ececec !important;
 }
 
-#json-conclude-form .json-table tr th {
+.viz-editor-table tr th {
 	background-color: #cccccc;
-	cursor: move;
 }
 
-#json-conclude-form .json-wizard-hints .json-info {
+.viz-editor-table thead tr th:nth-child(n+1) {
+	cursor: move !important;
+}
+
+#json-conclude-form .json-wizard-hints .info,
+.html-table-editor-hints .info {
 	margin: 1% 0px;
 }
 
@@ -1397,4 +1385,50 @@ span.viz-section-error {
 	border-color: #0085BA !important;
 	background: #0085BA !important;
 	color: #ffffff;
+}
+
+/******************************************************************************/
+/********************************  html table editor **************************/
+/******************************************************************************/
+.viz-simple-editor-type,
+.viz-simple-editor {
+	display: none;
+}
+
+.viz-table-editor {
+	width: 75%;
+	margin-left: 2%;
+}
+
+.viz-html-table,
+button#visualizer-save-html-table {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+
+/******************************************************************************/
+/********************************  text area editor **************************/
+/******************************************************************************/
+.viz-text-editor {
+	padding: 20px;
+	z-index: 9999;
+	box-sizing: border-box;
+	padding-right: 320px;
+}
+
+.viz-text-editor textarea {
+	width: 85%;
+	overflow: auto;
+	background: #282923;
+	color: #ffffff;
+	padding: 15px;
+	height: 400px;
+	font-size: 15px;
+}
+
+.viz-text-editor textarea,
+button#viz-text-editor-button {
+	display: inline-block;
+	vertical-align: middle;
 }
