line, bar, column, pie, polar

--- a/css/frame.css
+++ b/css/frame.css
@@ -1436,3 +1436,11 @@ button#viz-text-editor-button {
 	display: inline-block;
 	vertical-align: middle;
 }
+
+/******************************************************************************/
+/********************************  chartjs ***********************************/
+/******************************************************************************/
+
+canvas.chartjs-render-monitor {
+	height: 500px !important;
+}
