hide print button

--- a/css/frame.css
+++ b/css/frame.css
@@ -1348,6 +1348,10 @@ span.viz-section-error {
 	display: none !important;
 }
 
+.dt-button.buttons-print {
+	display: none;
+}
+
 /******************************************************************************/
 /********************************  json table *********************************/
 /******************************************************************************/
