--- a/css/frame.css
+++ b/css/frame.css
@@ -441,14 +441,14 @@ div.viz-group-content .viz-group-description {
 	padding: 15px;
 	border: 1px solid #e0e0e0;
 	background-color: white;
-	background-image: url(../images/chart_types_g.png);
+	background-image: url(../images/chart_types_june2019_g.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 }
 
 .type-label-selected,
 .type-box > .type-label:hover {
-	background-image: url(../images/chart_types.png);
+	background-image: url(../images/chart_types_june2019.png);
 }
 
 .type-box-area .type-label {
@@ -501,6 +501,14 @@ div.viz-group-content .viz-group-description {
 
 .type-box-combo .type-label {
 	background-position: -597px -670px;
+}
+
+.type-box-polarArea .type-label {
+	background-position: -2px -912px;
+}
+
+.type-box-radar .type-label {
+	background-position: -301px -899px;
 }
 
 /******************************************************************************/
