--- a/css/library.css
+++ b/css/library.css
@@ -151,13 +151,16 @@
 }
 
 #visualizer-sidebar {
-	display: table-cell;
-	width: 250px;
+	clear: both;
+	margin: 20px 0px;
+	width: 96%;
 }
 
 .visualizer-sidebar-box ul li {
 	margin: 4px 0;
 	color: #23282d;
+	float: left;
+	width: 25%;
 }
 
 .visualizer-sidebar-box ul {
@@ -168,13 +171,10 @@
 
 .visualizer-sidebar-box {
 	display: block;
-	width: 95%;
-	margin: 0;
-	margin-top: 20px;
-	margin-left: 2.5%;
 	padding-top: 10px;
 	padding-bottom: 15px;
 	border-top: 5px solid #0073aa;
+	border-bottom: 5px solid #0073aa;
 	color: #0073aa;
 	background: white;
 	text-align: center;
