align button and types bar

--- a/css/library.css
+++ b/css/library.css
@@ -306,3 +306,8 @@ button.media-modal-close {
 #visualizer-library canvas.chartjs-render-monitor {
 	height: 100% !important;
 }
+
+div#visualizer-types ul, div#visualizer-types form p {
+	vertical-align: middle;
+	margin: 0;
+}
