--- a/css/upsell.css
+++ b/css/upsell.css
@@ -1,19 +1,30 @@
-#viz-features .viz-features-header {
-	box-sizing: border-box;
-	padding: 20px 30px 30px;
+#viz-features .pro-features-header {
+	padding: 20px 10px;
 	border-top: 5px solid #252b37;
 	background: #fff;
 }
 
+#viz-features .logo {
+	display: inline-block;
+	margin: 0 0 0 20px;
+	padding: 0 0 0 70px;
+	color: #3c3c3c;
+	background: url(../img/wppr-logo.png) no-repeat left center;
+	font-family: "Open Sans", sans-serif;
+	font-size: 2em;
+	font-weight: 700;
+	line-height: 60px;
+	letter-spacing: -1px;
+}
+
 #viz-features .slogan {
 	display: inline-block;
-	margin: 0 0 0 8px;
+	margin: 0 0 0 5px;
 	padding: 0;
 	color: #858585;
 	font-family: "Open Sans", sans-serif;
 	font-size: 17px;
-	line-height: 1;
-	vertical-align: 4px;
+	line-height: 3.5;
 }
 
 #viz-features .slogan a {
@@ -21,7 +32,6 @@
 	font-weight: 600;
 	font-style: italic;
 	text-decoration: none;
-	-webkit-transition: all 0.250s ease-in-out;
 	transition: all 0.250s ease-in-out;
 }
 
@@ -35,7 +45,9 @@
 }
 
 #viz-features .header-btns {
-	margin: 7px auto;
+	float: right;
+	margin: 7px 20px;
+	text-align: right;
 }
 
 #viz-features .header-btns .buy-now {
@@ -52,7 +64,6 @@
 	font-weight: bold;
 	text-decoration: none;
 	text-transform: uppercase;
-	-webkit-transition: all 0.250s ease-in-out;
 	transition: all 0.250s ease-in-out;
 }
 
@@ -64,94 +75,64 @@
 	padding-right: 3px;
 }
 
-#viz-features {
-	padding: 0;
-}
-
-#viz-features .viz-features-content {
-	width: 100%;
-	padding: 0;
-}
-
-#viz-features .viz-features-header,
-#viz-features .viz-feature {
-	box-sizing: border-box;
-	width: 100%;
-	margin: 30px 0 0;
-	padding: 30px;
-	background-color: #fff;
+#viz-features .pro-features-header,
+#viz-features .pro-feature {
+	display: block;
+	margin: 10px;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
 }
 
-#viz-features .viz-feature .viz-feature-features,
-#viz-features .viz-feature .viz-feature-image {
+#viz-features .pro-feature .pro-feature-features,
+#viz-features .pro-feature .pro-feature-image {
+	display: table-cell;
 	margin: 0;
 	vertical-align: middle;
 }
 
-#viz-features .viz-feature .viz-feature-features {
+#viz-features .pro-feature .pro-feature-features {
 	box-sizing: border-box;
-	padding: 0 0 20px;
+	padding: 30px;
 }
 
-#viz-features .viz-feature .viz-feature-image img {
-	max-width: 470px;
+#viz-features .pro-feature .pro-feature-image {
+	width: 470px;
 }
 
-#viz-features .viz-feature .viz-feature-image iframe {
-	max-width: 100%;
-}
-
-#viz-features .viz-feature .viz-feature-features h2 {
+#viz-features .pro-feature .pro-feature-features h2 {
 	margin: 0 0 20px;
 	font-size: 28px;
-	font-weight: 700;
-	line-height: 1.2;
 }
 
-#viz-features .viz-feature .viz-feature-features h4 {
+#viz-features .pro-feature .pro-feature-features h4 {
 	margin: 0 0 10px;
-	font-size: 24px;
+	font-size: 20px;
 }
 
-#viz-features .viz-feature .viz-feature-features p {
+#viz-features .pro-feature .pro-feature-features p {
 	margin: 0 0 15px;
-	font-size: 18px;
+	font-size: 16px;
 	line-height: 1.5;
 }
 
-#viz-features .viz-feature .viz-feature-image img {
+#viz-features .pro-feature .pro-feature-image img {
 	width: 100%;
 	height: auto;
 }
 
-@media screen and (min-width: 768px) {
-	#viz-features {
-		padding: 0 15px;
-	}
-}
-
-@media screen and (min-width: 1200px) {
-	#viz-features .viz-feature {
-		padding: 30px 60px;
+@media screen and (max-width: 1200px) {
+	#viz-features .pro-feature .pro-feature-features,
+	#viz-features .pro-feature .pro-feature-image {
+		display: block;
 	}
 
-	#viz-features .viz-feature .viz-feature-features {
-		padding: 0 30px 0 0;
+	#viz-features .pro-feature .pro-feature-image {
+		width: 470px;
+		margin: 0 auto 20px;
+		text-align: center;
 	}
 
-	#viz-features .viz-feature .viz-feature-features h2 {
-		font-size: 30px;
-	}
-
-	#viz-features .viz-feature .viz-feature-features p {
-		font-size: 20px;
-	}
-}
-
-@media screen and (min-width: 1500px) {
-	#viz-features .viz-feature .viz-feature-features {
-		padding: 0 120px 0 0;
+	#viz-features .slogan {
+		display: none;
 	}
 }
 
@@ -167,51 +148,29 @@
 	#viz-features .header-btns {
 		display: block;
 		float: none;
-		margin: 10px 0 0;
+		margin: 0 0 10px 0;
 		text-align: center;
 	}
 }
 
-@media screen and (max-width: 1200px) {
-	#viz-features .viz-feature .viz-feature-features,
-	#viz-features .viz-feature .viz-feature-image {
-		display: block;
+@media screen and (max-width: 782px) {
+	#cwp_form #header .button {
+		padding: 0 4px 1px !important;
+		font-size: 11px !important;
 	}
 
-	#viz-features .viz-feature .viz-feature-image {
-		display: inline-block;
-		max-width: 100%;
-		margin: 0 auto 30px;
+	#cwp_form #header .logo h2 {
+		margin: 0 !important;
+		padding: 0 !important;
 	}
 
-	#viz-features .slogan {
-		display: none;
+	#viz-features .pro-feature .pro-feature-image {
+		width: 100%;
 	}
 }
 
-#viz-features.viz-settings .viz-feature {
-	margin-top: 0;
-	border: none;
-}
-
-#viz-features.viz-settings  .nav-tab-wrapper {
-	border-bottom: none;
-}
-
-#viz-features.viz-settings   .nav-tab-wrapper a.nav-tab-active,
-#viz-features.viz-settings  .nav-tab-wrapper a:hover {
+#viz-features .pro-feature .pro-feature-inner {
+	display: table;
+	width: 100%;
 	background: #fff;
-}
-
-#viz-features.viz-settings  .nav-tab-wrapper a {
-	margin-top: 10px;
-	padding: 10px 20px;
-	border: 0;
-	color: #000;
-	background: #e0e0e0;
-	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
-}
-
-.viz-feature-centered {
-	text-align: center;
 }
