--- a/css/frame.css
+++ b/css/frame.css
@@ -1422,6 +1422,35 @@ span.viz-section-error {
 	color: #ffffff;
 }
 
+.viz-substep {
+	outline: 0 !important;
+	border: 0 !important;
+	background: none !important;
+	text-transform: uppercase;
+}
+
+.viz-substep.ui-state-active {
+}
+
+.viz-substep ~ .ui-accordion-content {
+	outline: 0 !important;
+	border: 0 !important;
+	font-size: smaller;
+}
+
+.viz-substep ~ div {
+	display: table;
+}
+
+.viz-substep ~ div > div {
+	display: table-row;
+}
+
+.viz-substep ~ div > div div {
+	display: table-cell;
+	padding: 5px;
+}
+
 /******************************************************************************/
 /********************************  html table editor **************************/
 /******************************************************************************/
