move cancel buttons to the right

--- a/css/frame.css
+++ b/css/frame.css
@@ -378,6 +378,7 @@ div.viz-group-content .viz-group-description {
 
 #toolbar .push-right {
 	float: right;
+	margin-right: 10px;
 }
 
 #toolbar .push-left {
