show message that annotations will not show in the editor

--- a/classes/Visualizer/Gutenberg/src/style.scss
+++ b/classes/Visualizer/Gutenberg/src/style.scss
@@ -95,6 +95,10 @@
 					font-weight: bold;
 					text-align: center;
 				}
+
+    .visualizer-settings__charts-footer {
+        font-size: small;
+    }
 		
 				.visualizer-settings__charts-controls {
 					width: 100%;
