Basic filtering/ordering system

--- a/css/library.css
+++ b/css/library.css
@@ -288,6 +288,10 @@ input:checked + .visualizer-slider:before {
 	text-align: center;
 }
 
+div.visualizer-library-form .viz-filter {
+	vertical-align: middle;
+}
+
 button.media-modal-close {
 	display: none !important;
 }
