--- a/css/upsell.css
+++ b/css/upsell.css
@@ -9,7 +9,7 @@
 	margin: 0 0 0 20px;
 	padding: 0 0 0 70px;
 	color: #3c3c3c;
-	background: url(../img/wppr-logo.png) no-repeat left center;
+	background: url(../images/icon.png) no-repeat left center;
 	font-family: "Open Sans", sans-serif;
 	font-size: 2em;
 	font-weight: 700;
