--- a/css/library.css
+++ b/css/library.css
@@ -107,8 +107,16 @@
 	background-position: -46px -64px;
 }
 
+.visualizer-nochart-shortcode,
+.visualizer-chart-shortcode {
+    background-position: -143px -126px;
+    float: left;
+}
+
 .visualizer-nochart-clone,
 .visualizer-nochart-delete,
+.visualizer-nochart-shortcode,
+.visualizer-nochart-export,
 .visualizer-nochart-edit {
 	opacity: 0.5;
 
