--- a/css/frame.css
+++ b/css/frame.css
@@ -519,9 +519,11 @@ div.viz-group-content .viz-group-description {
 	background-position: -600px -225px;
 }
 
-.type-box-dataTable .type-label,
-.type-box-table .type-label,
-.type-box-tabular .type-label {
+.type-box-dataTable .type-label {
+	background-position: -301px -670px;
+}
+
+.type-box-table .type-label {
 	background-position: -301px -670px;
 }
 
