--- a/css/frame.css
+++ b/css/frame.css
@@ -806,6 +806,9 @@ button#editor-chart-button {
 .viz-select-library {
 	color: #0085ba;
 }
+.viz-select-library.viz-hide-libary {
+	display: none;
+}
 
 .viz-select-library option:first-child {
 	font-weight: bold;
