--- a/css/library.css
+++ b/css/library.css
@@ -1,3 +1,10 @@
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 #visualizer-icon {
 	background-image: url("../images/icon.png");
 }
@@ -24,11 +31,21 @@
 .visualizer-list-item .visualizer-pro-only {
 	text-decoration: line-through;
 }
-
+#visualizer-content-wrapper {
+    padding: 0;
+}
 #visualizer-library {
-	display: table-cell;
+	/*display: table-cell;*/
 	width: auto;
-	margin: 20px 0;
+	margin: 20px -10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+#visualizer-library.visualizer-clearfix:before,
+#visualizer-library.visualizer-clearfix:after {
+    display: none;
 }
 
 #visualizer-content-wrapper {
@@ -42,11 +59,13 @@
 	margin-top: -16px;
 	margin-left: -16px;
 }
+#visualizer-library .items {
+    padding: 0 10px;
+    width: 33.3333%;
+}
 
 .visualizer-chart {
-	display: none;
-	float: left;
-	margin: 0 24px 24px 0;
+	margin: 0 0px 24px 0;
 	padding: 5px;
 	border: 1px solid #ddd;
 	background-color: #efefef;
@@ -131,6 +150,7 @@
 
 .visualizer-chart-footer {
 	margin-top: 4px;
+    width: 100%;
 }
 
 .visualizer-chart-shortcode {
@@ -163,35 +183,85 @@
 	text-align: right;
 }
 
-#visualizer-sidebar {
-	clear: both;
-	margin: 20px 0px;
-	width: 96%;
+.visualizer-sidebar-box {
+    display: block;
+    padding: 30px 34px;
+    background: white;
 }
 
-.visualizer-sidebar-box ul li {
-	margin: 4px 0;
-	color: #23282d;
-	float: left;
-	width: 25%;
+.visualizer-sidebar-box h3{
+    padding: 0;
+    margin: 0 0 20px;
+    display: block;
+    width: 100%;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 .visualizer-sidebar-box ul {
-	margin-left: 40px;
-	text-align: left;
-	list-style-type: disc;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.visualizer-sidebar-box {
-	display: block;
-	padding-top: 10px;
-	padding-bottom: 15px;
-	border-top: 5px solid #0073aa;
-	border-bottom: 5px solid #0073aa;
-	color: #0073aa;
-	background: white;
-	text-align: center;
+.visualizer-sidebar-box ul li {
+	color: #000;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.8;
+    position: relative;
+    padding-left: 26px;
 }
+
+.visualizer-sidebar-box ul li .icon{
+    color: #00AA63;
+    width: 16px;
+    height: 16px;
+    margin-top: 3px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.visualizer-sidebar-box .button {
+    width: 155px;
+    height: 39px;
+    background: #007CBA;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    justify-content: center;
+}
+.visualizer-sidebar-box .we-offer{
+    background-color: transparent; 
+    color: #007CBA; 
+    font-weight: 400;
+    padding: 0px;
+    font-size: 14px;
+    font-style: italic;
+    margin-bottom: 0;
+}
+.visualizer-sidebar-box .help-us-improve{
+    display: none;
+}
+.visualizer-chart.viz-pro {
+    padding: 0;
+}
+.visualizer-chart.viz-pro .two-columns{
+    padding: 0;
+    border: 1px solid #DDDDDD;
+    border: 5px solid #007CBA;
+}
+#visualizer-library .items.two-col {
+    width: 66.6666%;
+}
+
 
 /* The switch - the box around the slider */
 .visualizer-switch {
@@ -286,13 +356,20 @@ input:checked + .visualizer-slider:before {
 	margin-top: 0;
 }
 
+#visualizer-sidebar.two-columns .visualizer-sidebar-box ul li {
+    width: calc(50% - 26px)
+}
+#visualizer-sidebar.one-columns .visualizer-sidebar-box ul li {
+    width: 100%;
+}
+#visualizer-sidebar.one-columns .visualizer-sidebar-box p {
+    margin-top: 8px;
+}
 #visualizer-sidebar .visualizer-sidebar-box p {
 	margin-bottom: 0;
 }
-
-#visualizer-sidebar .visualizer-sidebar-box {
-	padding-top: 20px;
-	padding-bottom: 20px;
+#visualizer-sidebar.one-columns {
+    border-top: 5px solid #007CBA;
 }
 
 .visualizer-chart-title {
@@ -348,4 +425,16 @@ div#visualizer-types ul, div#visualizer-types form p {
 .visualizer-error i.error {
 	color: red;
 	cursor: pointer;
+}
+#toplevel_page_visualizer ul.wp-submenu li.wp-first-item + li + li + li {
+    background: #FF7E65;
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+}
+#toplevel_page_visualizer ul.wp-submenu li.wp-first-item + li + li + li > a {
+    color: #fff;
+}
+#toplevel_page_visualizer ul.wp-submenu li.wp-first-item + li + li + li > a:hover {
+    box-shadow: inherit;
 }
