Fix e2e testcase Codeinwp/visualizer-pro#314

--- a/css/library.css
+++ b/css/library.css
@@ -253,7 +253,7 @@
 .visualizer-chart.viz-pro {
     padding: 0;
 }
-.visualizer-chart.viz-pro .two-columns{
+.two-col .viz-pro .two-columns{
     padding: 0;
     border: 1px solid #DDDDDD;
     border: 5px solid #007CBA;
