--- a/css/library.css
+++ b/css/library.css
@@ -35,12 +35,10 @@
     padding: 0;
 }
 #visualizer-library {
-	/*display: table-cell;*/
 	width: auto;
 	margin: 20px -10px;
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
 }
 
 #visualizer-library.visualizer-clearfix:before,
@@ -225,7 +223,7 @@
     margin-top: 3px;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 3px;
 }
 .visualizer-sidebar-box .button {
     width: 155px;
@@ -433,8 +431,21 @@ div#visualizer-types ul, div#visualizer-types form p {
     color: #fff;
 }
 #toplevel_page_visualizer ul.wp-submenu li.wp-first-item + li + li + li > a {
-    color: #fff;
+    color: #fff !important;
 }
 #toplevel_page_visualizer ul.wp-submenu li.wp-first-item + li + li + li > a:hover {
     box-shadow: inherit;
+}
+#visualizer-library .items .viz-pro{
+	height: 100%;
+	padding-bottom: 24px;
+}
+#visualizer-library .items .viz-pro .one-columns{
+	height: 100%;
+}
+#visualizer-library .items .viz-pro .visualizer-sidebar-box{
+	height: 100%;
+}
+#visualizer-library .items .viz-pro.two-columns{
+	padding-bottom: 0;
 }
