--- a/css/library.css
+++ b/css/library.css
@@ -424,7 +424,12 @@ div#visualizer-types ul, div#visualizer-types form p {
 	color: red;
 	cursor: pointer;
 }
-@media (max-width: 1400px) {
+@media (-webkit-min-device-pixel-ratio: 2) and (min-width: 1000px) and (max-width: 1600px)  {
+	#visualizer-sidebar.one-columns .visualizer-sidebar-box ul li:nth-child(+n+7) {
+	    display: none;
+	}
+}
+@media  (max-width: 1500px) {
 	#visualizer-library .items .viz-pro{
 		height: 100%;
 		padding-bottom: 24px;
