--- a/css/library.css
+++ b/css/library.css
@@ -432,8 +432,8 @@ div#visualizer-types ul, div#visualizer-types form p {
 	padding: 5px 0 5px 5px;
 	border: 1px solid #ddd;
 }
-.google-visualization-controls-rangefilter-thumblabel {
-	padding: 0 !important;
+.google-visualization-controls-rangefilter {
+	white-space: inherit !important;
 }
 @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 1000px) and (max-width: 1600px)  {
 	#visualizer-sidebar.one-columns .visualizer-sidebar-box ul li:nth-child(+n+7) {
