Fix simple editor table scrolling issue Codeinwp/visualizer-pro#353

--- a/css/frame.css
+++ b/css/frame.css
@@ -1526,6 +1526,10 @@ button#viz-text-editor-button {
 	vertical-align: middle;
 }
 
+.viz-simple-editor .viz-html-table {
+	width: 95%;
+}
+
 /******************************************************************************/
 /********************************  chartjs ***********************************/
 /******************************************************************************/
