--- a/css/library.css
+++ b/css/library.css
@@ -462,13 +462,22 @@ div#visualizer-types ul, div#visualizer-types form p {
 	outline: none;
 	box-shadow: none;
 }
-.visualizer-languages-list i {
+.visualizer-languages-list:not(.only-pro) i {
 	display: none;
 }
-.visualizer-languages-list a:hover img {
+.visualizer-languages-list:not(.only-pro) a:hover img {
 	display: none;
 }
-.visualizer-languages-list a:hover img + i {
+.visualizer-languages-list:not(.only-pro) a:hover img + i {
+	display: block;
+}
+.visualizer-languages-list.only-pro a:last-child {
+	display: none;
+}
+.visualizer-languages-list.only-pro:hover a:not(:last-child) {
+	display: none;
+}
+.visualizer-languages-list.only-pro:hover a:last-child {
 	display: block;
 }
 @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 1000px) and (max-width: 1600px)  {
