--- a/css/frame.css
+++ b/css/frame.css
@@ -484,6 +484,7 @@ div.viz-group-content .viz-group-description {
 	height: 17px;
 	border: none;
 	color: #fff;
+	z-index: 1;
 	background: #c55555;
 }
 
@@ -494,18 +495,21 @@ div.viz-group-content .viz-group-description {
 	padding: 15px;
 	border: 1px solid #e0e0e0;
 	background-color: white;
-	background-image: url(../images/chart_types_v340_g.png);
+	background-image: url(../images/chart_types_v395.png);
 	background-repeat: no-repeat;
 	background-position: center center;
+	background-size: 900px 1150px;
+	filter: grayscale(100%);
 }
 
 .type-label-selected,
-.type-box > .type-label:hover {
-	background-image: url(../images/chart_types_v340.png);
+.type-box .type-label:hover {
+/*	background-image: url(../images/chart_types_v340.png);*/
+	filter: grayscale(0);
 }
 
 .type-box-area .type-label {
-	background-position: 0 -225px;
+	background-position: -8px -225px;
 }
 
 .type-box-line .type-label {
@@ -521,7 +525,7 @@ div.viz-group-content .viz-group-description {
 }
 
 .type-box-gauge .type-label {
-	background-position: 0 -450px;
+	background-position: -7px -450px;
 }
 
 .type-box-geo .type-label {
@@ -529,7 +533,7 @@ div.viz-group-content .viz-group-description {
 }
 
 .type-box-candlestick .type-label {
-	background-position: -300px -450px;
+	background-position: -304px -450px;
 }
 
 .type-box-bar .type-label {
@@ -537,7 +541,7 @@ div.viz-group-content .viz-group-description {
 }
 
 .type-box-bubble .type-label {
-	background-position: -600px -906px;
+	background-position: -604px -906px;
 }
 
 .type-box-column .type-label {
@@ -551,11 +555,11 @@ div.viz-group-content .viz-group-description {
 }
 
 .type-box-timeline .type-label {
-	background-position: -2px -670px;
+	background-position: -8px -670px;
 }
 
 .type-box-combo .type-label {
-	background-position: -597px -670px;
+	background-position: -606px -670px;
 }
 
 .type-box-polarArea .type-label {
