--- a/css/frame.css
+++ b/css/frame.css
@@ -1081,7 +1081,7 @@ button#editor-chart-button {
 .only-pro-content a {
 	display: inline-block;
 	padding: 7px 12px;
-	color: #fff !important;
+	color: #fff;
 	background: #3F57E1;
 	font-weight: 600;
 	text-decoration: none;
@@ -1089,6 +1089,9 @@ button#editor-chart-button {
 	border-width: 1px;
 	border-style: solid;
 	border-radius: 3px;
+}
+.only-pro-content .only-pro-container a {
+	color: #fff !important;
 }
 
 .only-pro-content a:hover {
