feat: show chart type select within frame show chart type select on free improve styles References: Codeinwp/visualizer-pro#447

--- a/css/frame.css
+++ b/css/frame.css
@@ -433,6 +433,18 @@ div.viz-group-content .viz-group-description {
 	vertical-align: top;
 }
 
+#chart-select {
+	display: flex;
+	padding: 12px 8px;
+	justify-content: center;
+	align-items: center;
+	gap: 12px;
+}
+
+#chart-select label {
+	font-weight: bold;
+}
+
 /******************************************************************************/
 /********************************  TYPE PICKER   ******************************/
 /******************************************************************************/
@@ -471,7 +483,7 @@ div.viz-group-content .viz-group-description {
 	box-shadow: 0 0 8px #ddd;
 }
 
-.type-box:nth-child(3n+3) {
+.type-box:nth-child(3n+1) {
 	margin-right: 0;
 }
 
