feat: add info panel

--- a/css/frame.css
+++ b/css/frame.css
@@ -395,6 +395,35 @@ div.viz-group-content .viz-group-description {
 #viz-tabs .wp-color-picker {
   width: 4rem !important;
 }
+
+.viz-info-panel {
+	display: flex;
+	flex-direction: column;
+	padding: 5px;
+	gap: 10px;
+}
+
+.viz-info-panel p {
+	margin: 0;
+	padding: 0;
+}
+
+.viz-info-panel input {
+	flex: 1;
+}
+
+.viz-info-panel .viz-info-item {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+
+.viz-info-panel .viz-info-row {
+	display: flex;
+	flex-direction: row;
+	gap: 5px;
+}
+
 /******************************************************************************/
 /********************************  TOOLBAR  ***********************************/
 /******************************************************************************/
